content/v1/1.getting-started/3.setup.md
# Setup

## Requirements

Here's a list of the tested versions of GameMaker that works properly with **GM-I18n**. 

| Platform    | IDE            | Runtime        | Notes |
|-------------|----------------|----------------|-------|
| Windows VM  | v2024.13.1.193 | v2024.13.1.242 | All API works properly |
| Windows YYC | v2024.13.1.193 | v2024.13.1.242 | All API works properly |
| HTML5       | v2024.13.1.193 | v2024.13.1.242 | Core API works properly, but there's an issue with the drawing functions | 

It should work on other versions of GameMaker 2.3+ too. Please let me know on the [tested versions page](https://github.com/undervolta/GM-I18n/issues/2) if you tested it on other versions that not listed above, whether it works properly or not. It will help me and other users who want to know which versions of GameMaker that works properly with **GM-I18n**.

---

## Installation

### Importing/Upgrading Package

There're 2 ways to import/upgrade the **GM-I18n** package to your project. You can choose one that you prefer. 

#### Using Package Manager

1. Download the latest release from the [releases page](https://github.com/undervolta/GM-I18n/releases). <br> <img src="/img/setup-1.webp" alt="Download" loading="lazy" class="max-w-100 h-auto" />
2. Import the `GM-I18n v<version>.yymps` file to your project by dragging it to the IDE. <br> <img src="/img/setup-2.webp" alt="Import" loading="lazy" class="max-w-100 h-auto" />
3. Select the `scI18n` script from the list to import and click `Add`, or just click `Add All`. And finally, click the `Import` button. <br> <img src="/img/setup-3.webp" alt="Import" loading="lazy" class="max-w-100 h-auto" />
4. If you're upgrading the package, a new window will appear. Checklist the `Replace` option and then click the `Import` button. <br> <img src="/img/setup-5.webp" alt="Upgrade" loading="lazy" class="max-w-100 h-auto" />

#### Manual Import

1. Download the latest release from the [releases page](https://github.com/undervolta/GM-I18n/releases). <br> <img src="/img/setup-1.webp" alt="Download" loading="lazy" class="max-w-100 h-auto" />
2. Extract the downloaded file. You should see 5 files: `GM-I18n v<version>.yymps`, `I18nConstants.d.ts`, `I18nConstructors.d.ts`, `I18nFunctions.d.ts`, and `scI18n.gml`. <br> <img src="/img/setup-4.webp" alt="Extract" loading="lazy" class="max-w-100 h-auto" />
3. Open the `scI18n.gml` file and then copy the content of it to a new script in your project.

### Offline Documentation (Optional)

There's some types definition files in the package, which is `I18nConstants.d.ts`, `I18nConstructors.d.ts`, and `I18nFunctions.d.ts`. These files are types definition files that you can use to help you understand better how to use the **GM-I18n** API.

Think of it as a cheatsheet for **GM-I18n** documentation. It's not as comprehensive as the web documentation, but it's better than nothing. If you want to use it, you can follow the steps below: 

1. Extract the downloaded file. You should see 5 files: `GM-I18n v<version>.yymps`, `I18nConstants.d.ts`, `I18nConstructors.d.ts`, `I18nFunctions.d.ts`, and `scI18n.gml`. <br> <img src="/img/setup-4.webp" alt="Extract" loading="lazy" class="max-w-100 h-auto" />
2. Open the `GM-I18n v<version>` folder with your favorite code editor (such as [Visual Studio Code](https://code.visualstudio.com/), [Lite XL](https://lite-xl.com/), [Atom](https://atom.io/), or other code editor you prefer). <br> <img src="/img/setup-6.webp" alt="Open with Code Editor" loading="lazy" class="max-w-100 h-auto" />
3. You're done! You can use it as a "side-by-side" reference for the **GM-I18n** API. <br> <img src="/img/setup-7.webp" alt="Offline Documentation" loading="lazy" class="max-w-100 h-auto" />

If you're using [Visual Studio Code](https://code.visualstudio.com/) (or other advanced code editor) as your secondary code editor for this purpose, you may get a better experience than using the GameMaker's built-in code editor. You can get the hover tooltip, type hints, jump-to-definition, and other features that make your coding experience better.

<img src="/img/setup-8.webp" alt="External Code Editor" loading="lazy" class="max-w-100 h-auto" />

---

## Configuration

You can create your own `fonts` asset normally if the language you're using is a Latin-based language. But, if you're adding language with non-Latin characters, you **need** to follow the steps below:

### Using Font Assets

1. Create a new `font` asset in the IDE as you usually do.
2. Click `Add` to add new range to the font asset for each character range you need. Set the `from` and `to` to the first and last character of the range. For example, if you're adding Japanese, you may add _Higarana_ (`12352` to `12447`), _Katakana_ (`12448` to `12543`), and _Kanji_ (`13312` to `19903`). <br> <img src="/img/config-1.webp" alt="Font Asset" loading="lazy" class="max-w-100 h-auto" />
3. Click `Add Range` after you done adding all the ranges you need. 
4. Repeat the steps above for each font you need.

::alert{type="info"}
You can find the character ranges for other languages <a href="https://en.wikipedia.org/wiki/List_of_Unicode_characters" target="_blank">here</a>. Please note that the ranges are in decimal format, while the website shows it in hexadecimal. You can use an online converter to convert the hexadecimal to decimal.
::

::alert{type="warning"}
Please also note that **using too many ranges may cause the font asset to be too large, may cause performance issues, and may the characters won't be displayed correctly**. So, try to use as few ranges as possible. 
::

### Using Included Files

1. Prepare your font files. You can use any font you want, but make sure it's in `.ttf` or `.otf` format. You can convert any font to `.ttf` or `.otf` format using online converters.
2. Click `Menu` button in the Asset Browser (that one with 3 stripes icon), and then click `Included Files`. The `Included Files` window will open, and then click `Open in Explorer`. <br> <img src="/img/config-2.webp" alt="Included Files" loading="lazy" class="max-w-100 h-auto" />
3. A window will open and show you the `datafiles` folder of your project. Copy your font files there (with its license file). You can also make a folder for your font files, for example `fonts`. <br> <img src="/img/config-3.webp" alt="Copy Font Files" loading="lazy" class="max-w-100 h-auto" />
4. In the `Included Files` window, click `Refresh` button. Your font files should now appear in the list. 
5. Create the font asset from code. Use the <a href="https://manual.gamemaker.io/lts/en/GameMaker_Language/GML_Reference/Asset_Management/Fonts/font_add.htm" target="_blank">`font_add()`</a> function to create the font asset. For example: 

```js [objController - Create Event]
// font_add(name, size, bold, italic, first, last);
global.font_ja = font_add(working_directory + "fonts/NotoSansJP-Medium.ttf", 32, false, false, 32, 127);
```

::alert{type="warning"}
If you're targetting to HTML5 export, don't use `working_directory` before the file path.
::

6. Repeat step 5 for each font you need. 

::alert{type="info"}
It's recommended to set it to a global variable (and delete it with <a href="https://manual.gamemaker.io/lts/en/GameMaker_Language/GML_Reference/Asset_Management/Fonts/font_delete.htm" target="_blank">`font_delete()`</a> if you don't need it anymore). Pass the `32` to the `first` parameter, and `128` to the `last` parameter if you're not sure.
::

::alert{type="warning"}
Please take note that **using this method will load all glyphs in the font**, so **there is risk of a memory leak which will slow down and eventually crash your game**.
::

---

::alert{type="success"}
:icon{name="material-symbols:done-all-rounded"} &nbsp; That's it, you're almost done to use the GM-I18n system!
::
